[gd_scene load_steps=6 format=3 uid="uid://dcilkx23skb2a"]

[ext_resource type="Texture2D" uid="uid://bb438dajxofoy" path="res://sprites/sky.png" id="1_u8a70"]
[ext_resource type="Theme" uid="uid://bd6ru5cggrphn" path="res://ressources/LeTheme.tres" id="2_jiwmu"]
[ext_resource type="PackedScene" uid="uid://bho5jwiptbbbh" path="res://scenes/ui/button.tscn" id="3_3h865"]
[ext_resource type="Script" uid="uid://do5df2d3vq6ky" path="res://scripts/ui/victory_menu_panel.gd" id="3_jiwmu"]
[ext_resource type="PackedScene" uid="uid://bhitnpv7jfdjr" path="res://scenes/ui/text_dynamique.tscn" id="4_3h865"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("3_jiwmu")

[node name="VixtoryMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VixtoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_u8a70")

[node name="Ui" type="Control" parent="VixtoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_jiwmu")

[node name="VBoxContainer" type="VBoxContainer" parent="VixtoryMenu/Ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="_" type="Control" parent="VixtoryMenu/Ui/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
mouse_filter = 2

[node name="Control" type="Control" parent="VixtoryMenu/Ui/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VixtoryMenu/Ui/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="_" type="Control" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VictoryMenuPanel" type="Control" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelXFinish" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer" instance=ExtResource("4_3h865")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
colorTextButton = Color(1, 0.898039, 0.411765, 1)

[node name="_3" type="Control" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Next Level" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer" instance=ExtResource("3_3h865")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 3.0
textButton = "Next Level"
zoomValue = 1.15

[node name="_" type="Control" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Retry" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer" instance=ExtResource("3_3h865")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 3.0
textButton = "Retry"
zoomValue = 1.15

[node name="_2" type="Control" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Level Select" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer" instance=ExtResource("3_3h865")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 3.0
textButton = "Level Select"
zoomValue = 1.15

[node name="_2" type="Control" parent="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="_2" type="Control" parent="VixtoryMenu/Ui/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
mouse_filter = 2

[node name="Control" type="Control" parent="VixtoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="gui_input" from="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer/Next Level" to="." method="_on_next_level_gui_input"]
[connection signal="gui_input" from="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer/Retry" to="." method="_on_retry_gui_input"]
[connection signal="gui_input" from="VixtoryMenu/Ui/VBoxContainer/Control/HBoxContainer/VictoryMenuPanel/VBoxContainer/Level Select" to="." method="_on_level_select_gui_input"]
